# weathr

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  app_state.rs  config.rs  lib.rs  main.rs  render.rs
src/animation/: birds.rs  chimney.rs  clouds.rs  mod.rs  rain.rs  raindrops.rs  stars.rs
src/scene/: mod.rs
src/weather/: normalizer.rs  types.rs
tests/: open_meteo_provider_integration_test.rs
