[package]
name = "weathr"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Dony Mulya <veirt@duck.com>"]
description = "A terminal-based ASCII weather application with animated scenes driven by real-time weather data"
repository = "https://github.com/veirt/weathr"
keywords = ["weather", "terminal", "ascii", "cli"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
crossterm = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.2"
